Added translations to some modal data

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,6 +13,11 @@
         "search":"Search",
         "all":"All",
         "favorites":"Favorites",
+        "name":"Name",
+        "weight":"Weight",
+        "height":"Height",
+        "types":"Types",
+        "type":"Type",
         "modalBtn":"Share to my friends",
         "textCopied":"Text copied to clipboard!",
         "noApi":"Could not reach pokeapi.co",
