--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -13,6 +13,11 @@
         "search":"Buscar",
         "all":"Todos",
         "favorites":"Favoritos",
+        "name":"Nombre",
+        "weight":"Peso",
+        "height":"Altura",
+        "types":"Tipos",
+        "type":"Tipo",
         "modalBtn":"Comparte con mis amigos",
         "textCopied":"Texto copiado al portapapeles!",
         "noApi":"No se pudo conectar con pokeapi.co",
